--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
     <title>Dhanwis Academy</title>
   </head>
-  <body class="overflow-x-hidden">
+  <body class="overflow-x-hidden n">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
