navabar link, footer link, course page, course card and contact page edited

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
     <title>Dhanwis Academy</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LPNJ30JRDR"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LPNJ30JRDR");
+    </script>
   </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
